--- a/package.json
+++ b/package.json
@@ -3,63 +3,59 @@
   "version": "0.1.0",
   "private": true,
   "license": "MIT",
-  "proxy": "https://pfstore.ru",
+  "proxy": "http://freefaint.ru",
   "dependencies": {
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
     "express": "^4.17.1",
-    "express-fileupload": "^1.1.6",
-    "express-session": "^1.17.0",
+    "express-fileupload": "^1.2.0",
+    "express-session": "^1.17.1",
     "googleapis": "^45.0.0",
-    "mongoose": "^5.7.10",
-    "node-sass": "^4.13.0",
+    "mongoose": "^5.10.2",
+    "node-sass": "^4.14.1",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-grid-system": "^6.0.7",
     "react-redux": "^7.1.3",
-    "react-router-dom": "^5.1.2",
+    "react-router-dom": "^5.2.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "sharp": "^0.25.2",
-    "styled-components": "^4.4.1"
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
-    "@types/body-parser": "^1.17.1",
+    "@types/body-parser": "^1.19.0",
     "@types/connect-flash": "^0.0.35",
-    "@types/express": "^4.17.2",
-    "@types/express-fileupload": "^1.1.0",
-    "@types/express-session": "^1.15.15",
-    "@types/jest": "24.0.23",
-    "@types/mongoose": "^5.5.30",
-    "@types/node": "12.12.7",
-    "@types/passport": "^1.0.2",
+    "@types/express": "^4.17.7",
+    "@types/express-fileupload": "^1.1.4",
+    "@types/express-session": "^1.17.0",
+    "@types/jest": "^26.0.12",
+    "@types/mongoose": "^5.7.36",
+    "@types/node": "^14.6.2",
+    "@types/passport": "^1.0.4",
     "@types/passport-facebook": "^2.1.9",
-    "@types/react": "16.9.11",
-    "@types/react-dom": "16.9.4",
+    "@types/react": "^16.9.49",
+    "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.5",
-    "@types/react-router-dom": "^5.1.2",
+    "@types/react-router-dom": "^5.1.5",
     "@types/sharp": "^0.24.0",
-    "@types/styled-components": "^4.4.0",
-    "nodemon": "^2.0.0",
-    "pm2": "^4.1.2",
-    "react-scripts": "3.2.0",
-    "typescript": "3.7.2"
+    "@types/styled-components": "^5.1.2",
+    "nodemon": "^2.0.4",
+    "pm2": "^4.4.1",
+    "react-scripts": "^3.4.3",
+    "typescript": "^4.0.2"
   },
   "scripts": {
-    "start": "npm run build && npm run server",
-    "stop": "pm2 delete pfstore",
+    "start": "react-scripts start",
+    "back": "nodemon server/server.js",
+    "prod": "pm2 start pm2.config.js",
     "build": "npm run build:front && npm run build:back",
     "build:front": "react-scripts build",
-    "build:back": "tsc -p tsconfig.node.json",
-    "server": "npm run server:start",
-    "server:stop": "pm2 delete pfstore",
-    "server:start": "pm2 start pm2.config.js",
-    "debug:back": "nodemon server/server.js",
-    "debug:front": "react-scripts start"
+    "build:back": "tsc -p tsconfig.node.json"
   },
   "eslintConfig": {
     "extends": "react-app"
