--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.2.0",
   "private": true,
   "license": "MIT",
+  "proxy": "https://freefaint.ru",
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.58",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
