--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
+    "escpos": "^3.0.0-alpha.6",
+    "escpos-usb": "^3.0.0-alpha.4",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
     "express-session": "^1.17.1",
@@ -27,6 +29,7 @@
     "@types/axios": "^0.14.0",
     "@types/body-parser": "^1.19.0",
     "@types/connect-flash": "^0.0.35",
+    "@types/escpos": "^2.5.0",
     "@types/express": "^4.17.7",
     "@types/express-fileupload": "^1.1.4",
     "@types/express-session": "^1.17.0",
