--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "start": "react-scripts start",
     "back": "nodemon server/server.js",
     "prod": "pm2 start pm2.config.js",
-    "printer": "npm run server/printer.js",
+    "printer": "npm server/printer.js",
     "build": "npm run build:front && npm run build:back",
     "build:front": "react-scripts build",
     "build:back": "tsc -p tsconfig.node.json",
