--- a/package.json
+++ b/package.json
@@ -48,11 +48,14 @@
     "typescript": "^4.2.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "back": "nodemon server/server.js",
-    "prod": "pm2 start pm2.config.js",
-    "printer": "node server/printer.js",
+    "start": "npm run start front",
+    "front": "npm run start:front",
+    "back": "pm2 start pm2.config.js",
+    "printer": "pm2 start pm2.printer.config.js",
     "build": "npm run build:front && npm run build:back",
+    "start:front": "react-scripts start",
+    "start:back": "nodemon server/server.js",
+    "start:printer": "nodemon server/printer.js",
     "build:front": "react-scripts build",
     "build:back": "tsc -p tsconfig.node.json",
     "build:printer": "npm run printer:fix && npm run build:back",
