--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
+    "esc-pos-encoder": "^1.3.0",
     "escpos": "^3.0.0-alpha.6",
     "escpos-usb": "^3.0.0-alpha.4",
     "express": "^4.17.1",
@@ -29,6 +30,7 @@
     "@types/axios": "^0.14.0",
     "@types/body-parser": "^1.19.0",
     "@types/connect-flash": "^0.0.35",
+    "@types/esc-pos-encoder": "^1.2.0",
     "@types/escpos": "^2.5.0",
     "@types/express": "^4.17.7",
     "@types/express-fileupload": "^1.1.4",
@@ -60,7 +62,6 @@
     "build:back": "tsc -p tsconfig.node.json",
     "build:printer": "npm run printer:fix && npm run build:back",
     "printer:fix": "cp -f ./escpos.statuses.js.fix ./node_modules/escpos/statuses.js"
-    
   },
   "eslintConfig": {
     "extends": "react-app"
