added mirror api && added export logic

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -28,6 +28,7 @@
     "src/components",
     "src/pages",
     "src/contexts",
+    "src/tools",
     "src/hooks",
     "src/styles",
     "src/index.tsx",
