--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "license": "MIT",
   "proxy": "https://freefaint.ru",
   "dependencies": {
-    "@material-ui/core": "^4.11.4",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/data-grid": "^4.0.0-alpha.37",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
-    "avrora": "^0.0.5",
+    "avrora": "^0.0.28",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
@@ -24,6 +25,7 @@
     "passport-facebook": "^3.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "5.2.0",
     "sharp": "^0.25.2",
     "styled-components": "^5.3.0"
   },
@@ -42,6 +44,7 @@
     "@types/passport-facebook": "^2.1.9",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.8",
     "@types/sharp": "^0.24.0",
     "@types/styled-components": "^5.1.9",
     "nodemon": "^2.0.4",
